--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monitor",
+  "name": "learn-tailwindcss",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,5 +11,13 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.1",
+    "tailwindcss": "^2.1.4",
+    "typescript": "^4.3.2"
   }
 }
