--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/forms": "^0.3.3",
+    "classnames": "^2.3.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
