--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "json-server -d 750 -w -p 3333 ./server.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/forms": "^0.3.3",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-query": "^3.17.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
     "autoprefixer": "^10.2.6",
+    "json-server": "^0.16.3",
     "postcss": "^8.3.1",
     "tailwindcss": "^2.1.4",
     "typescript": "^4.3.2"
