--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "@hookform/resolvers": "^2.5.2",
     "@tailwindcss/forms": "^0.3.3",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.8.8",
     "react-icons": "^4.2.0",
-    "react-query": "^3.17.0"
+    "react-query": "^3.17.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
