--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start",
     "server": "json-server -d 750 -w -p 3333 ./server.js"
@@ -12,9 +12,11 @@
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
     "@hookform/resolvers": "^2.5.2",
+    "@react-keycloak/ssr": "^3.3.0",
     "@tailwindcss/forms": "^0.3.3",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "keycloak-js": "10.0.0",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
