--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3003",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "server": "json-server -d 750 -w -p 3333 ./server.js"
@@ -18,6 +18,7 @@
     "classnames": "^2.3.1",
     "keycloak-js": "10.0.0",
     "next": "10.2.3",
+    "next-auth": "^3.27.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.8",
