--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@hookform/resolvers": "^2.5.2",
     "@react-keycloak/ssr": "^3.3.0",
     "@tailwindcss/forms": "^0.3.3",
+    "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "keycloak-js": "10.0.0",
     "next": "10.2.3",
     "next-auth": "^3.27.2",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.8",
     "react-icons": "^4.2.0",
