--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react-hook-form": "^7.8.8",
     "react-icons": "^4.2.0",
     "react-query": "^3.17.0",
+    "react-select": "^4.3.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.11",
+    "@types/react-select": "^4.0.17",
     "autoprefixer": "^10.2.6",
     "json-server": "^0.16.3",
     "postcss": "^8.3.1",
