--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.2.0",
     "react-query": "^3.17.0",
     "react-select": "^4.3.1",
+    "react-use": "^17.2.4",
     "yup": "^0.32.9"
   },
   "devDependencies": {
