--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "file-saver": "^2.0.5",
     "https-proxy-agent": "^5.0.0",
     "keycloak-js": "10.0.0",
     "net": "^1.0.2",
